# zero-to-rust

./: .env  Cargo.toml  LICENSE  README.md  configuration.yaml
.config/: config.toml
.github/workflows/: general.yml
ref/: expanded_main.rs
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
